<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.codeberry</groupId>
    <artifactId>tadlib</artifactId>
    <version>0.1-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>net.java.dev.jna</groupId>-->
        <!--            <artifactId>jna</artifactId>-->
        <!--            <version>5.6.0</version>-->
        <!--        </dependency>-->
        <!--        <dependency> &lt;!&ndash; JNA dependency &ndash;&gt;-->
        <!--            <groupId>net.java.dev.jna</groupId>-->
        <!--            <artifactId>jna-platform</artifactId>-->
        <!--            <version>5.6.0</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


</project>